# hpsc.jl

./: Makefile  data-visualization.html  differential-equations.html  genindex.html  intro.html  julia-lang.html  linear-algebra.html  machine-learning.html  objects.inv  optimization.html  parallel-computing.html  probabilistic-programming.html  pyproject.toml  quantum-computing.html  search.html  searchindex.js  signal-image-processing.html
_sources/: linear-algebra.md  machine-learning.md  parallel-computing.md  quantum-computing.md  signal-image-processing.md
book/: _config.yml  _toc.yml  automatic-differentiation.md  data-management.md  data-visualization.md  deep-learning.md  differential-equations.md  intro.md  julia-lang.md  optimization.md  parallel-computing.md  probabilistic-programming.md
notebooks/: 10_data_structures.html  11_control_flow.html  12_metaprogramming.html  1_intro.html  2_variables.html  3_numerical_values.html  4_numerical_operators.html  5_string_values.html  6_string_operators.html  7_types.html  8_functions.html  9_base_functions.html
scripts/: build
src/hpml.jl/: Project.toml
src/hpml.jl/src/: 10_data_structures.jl  11_control_flow.jl  12_metaprogramming.jl  1_intro.jl  2_variables_operations.jl  3_numerical_values.jl  4_numerical_operators.jl  5_string_values.jl  6_string_operators.jl  7_types.jl  8_functions.jl  9_base_functions.jl  hpml.jl
src/hpsc.jl/: Project.toml
src/hpsc.jl/src/: 10_data_structures.jl  11_control_flow.jl  12_metaprogramming.jl  13_modules.jl  (+11 more)
src/scripts/: build  modify_ipynb.py
src/test/: Project.toml
