[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hpmlju"
version = "0.1.0"
authors = [{name = "Juan Lara", email = "julara@unal.edu.co"}]
description = "High Performance Machine Learning in Julia"
requires-python = ">3.8"
dependencies = [
    "jupytext", "jupyter-book", "click", "pydantic"
]

[project.optional-dependencies]
dev = ["black", "textbook-nvim", "asyncmake"]

[tool.setuptools.packages.find]
where = ["src/"]

[project.scripts]
modify_ipynb = "scripts.modify_ipynb:main"
